--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,28 +5,16 @@ on:
 jobs:
   linux:
     runs-on: ubuntu-latest
-    env:
-      VULKAN_VERSION: 1.3.211.0
-      VULKAN_SDK: ${{github.workspace}}/1.3.211.0/x86_64/
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Cache
-      id: cache
-      uses: actions/cache@v1.1.2
+    - uses: humbletim/setup-vulkan-sdk@v1.2.0
       with:
-        path: ${{env.VULKAN_SDK}}
-        key: VulkanSdk${{env.VULKAN_VERSION}}ExtractedLinux3
-    - name: Download & Extract Vulkan SDK
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: |
-        wget --no-cookies -O ../vulkansdk-linux-x86_64-${{env.VULKAN_VERSION}}.tar.gz https://sdk.lunarg.com/sdk/download/${{env.VULKAN_VERSION}}/linux/vulkansdk-linux-x86_64-${{env.VULKAN_VERSION}}.tar.gz?u=
-        tar -zxf ../vulkansdk-linux-x86_64-${{env.VULKAN_VERSION}}.tar.gz -C $GITHUB_WORKSPACE/
-    - name: Add vulkan SDK to PATH
-      run: |
-        echo ${{env.VULKAN_SDK}}/bin >> $GITHUB_PATH
+        vulkan-query-version: 1.3.211.0
+        vulkan-components: SPIRV-Tools
+        vulkan-use-cache: true
     - name: CMake
       run: cmake -Bbuild .
     - name: Build
@@ -35,29 +23,16 @@ jobs:
       run: python3 ./run_tests.py
   windows:
     runs-on: windows-latest
-    env:
-      VULKAN_VERSION: 1.3.211.0
-      VULKAN_SDK: C:\VulkanSDK\1.3.211.0
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Cache
-      id: cache
-      uses: actions/cache@v1.1.2
+    - uses: humbletim/setup-vulkan-sdk@v1.2.0
       with:
-        path: ${{env.VULKAN_SDK}}
-        key: VulkanSdk${{env.VULKAN_VERSION}}ExtractedWindows2
-    - name: Download & Install Vulkan SDK
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: |
-        Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/${{env.VULKAN_VERSION}}/windows/VulkanSDK-${{env.VULKAN_VERSION}}-Installer.exe?u= -OutFile ../vulkan-sdk-${{env.VULKAN_VERSION}}.exe
-        $installer = Start-Process -FilePath ../vulkan-sdk-${{env.VULKAN_VERSION}}.exe -Wait -PassThru -ArgumentList @("/S");
-        $installer.WaitForExit();
-    - name: Add vulkan SDK to PATH
-      run: |
-        echo ${{env.VULKAN_SDK}}/bin | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+        vulkan-query-version: 1.3.211.0
+        vulkan-components: SPIRV-Tools
+        vulkan-use-cache: true
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
     - name: CMake
