--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         vulkan-components: SPIRV-Tools
         vulkan-use-cache: true
     - name: CMake
-      run: cmake -Bbuild .
+      run: cmake -Bbuild -DDUSK_ENABLE_SANITIZERS=ON -DCMAKE_BUILD_TYPE=Debug .
     - name: Build
       run: cmake --build build
     - name: Test
@@ -36,7 +36,7 @@ jobs:
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
     - name: CMake
-      run: cmake -Bbuild -G "Visual Studio 17 2022" -A x64 .
+      run: cmake -Bbuild -DCMAKE_BUILD_TYPE=Debug -G "Visual Studio 17 2022" -A x64 .
     - name: Build
       run: cmake --build build
     - name: Test
